finished bitumen in storage

--- a/views/product/update.twig
+++ b/views/product/update.twig
@@ -3,7 +3,7 @@
 /* @var $model app\models\Order */
 #}
 {{ set(this, 'title', 'Редактирование товара') }}
-{{ set(this, 'params', { 'breadcrumbs' : [{ 'label' : 'Заказы', 'url': '/product' }, {'label' : this.title }] }) }}
+{{ set(this, 'params', { 'breadcrumbs' : [{ 'label' : 'Товары', 'url': '/product' }, {'label' : this.title }] }) }}
 
 <div class="product-update">
 
