made calculations at the order

--- a/views/report/print.twig
+++ b/views/report/print.twig
@@ -63,7 +63,7 @@
         <table class="table" style="margin-bottom: 80px;">
             <thead>
                 <tr>
-                    <th>Продукт</th>
+                    <th>Товар</th>
                     <th>Количество</th>
                     <th>Cумма</th>
                 </tr>
