--- a/views/setting/index.twig
+++ b/views/setting/index.twig
@@ -26,7 +26,7 @@
         {{ html.beginForm(['index'], 'post', {
             'id': 'setting-form',
             'enctype': 'multipart/form-data',
-            'class': form_class,
+            'class': 'needs-validation',
             'novalidate': 'novalidate',
             'data-pjax': 1
         }) | raw }}
