added total amount to product and personal setting page

--- a/views/setting/index.twig
+++ b/views/setting/index.twig
@@ -6,7 +6,7 @@
 
     {% set menuItems = [
         {'label' : 'Общие', 'url' : ['/setting/index']},
-        {'label' : 'Личные', 'url' : ['/setting/owner']},
+        {'label' : 'Личные', 'url' : ['/setting/personal']},
         {'label' : 'Склад', 'url' : ['/setting/storage']},
     ] %}
 
