--- a/views/storage/index.twig
+++ b/views/storage/index.twig
@@ -54,6 +54,7 @@
                                 </span>
                             </div>
                         </div>
+                        <small>Объём 10 000т.</small>
                     </div>
                 </div>
             </div>
