--- a/views/layouts/main.twig
+++ b/views/layouts/main.twig
@@ -132,6 +132,8 @@
             </div>
         </footer>
 
+        {# <script src="https://kit.fontawesome.com/a4eb6dc731.js" crossorigin="anonymous"></script> #}
+
         {{ void(this.endBody()) }}
     </body>
 </html>
