--- a/views/layouts/main.twig
+++ b/views/layouts/main.twig
@@ -109,6 +109,13 @@
                                 </div>
                             {% endif %}
 
+                            {% if ( app.session.hasFlash('error') ) %}
+                                <div class="alert alert-danger alert-dismissible" role="alert">
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                    {{ app.session.getFlash('error') }}
+                                </div>
+                            {% endif %}
+
                             {{ content | raw }}
                         </main>
 
