--- a/views/layouts/main.twig
+++ b/views/layouts/main.twig
@@ -124,7 +124,7 @@
         {% else %}
             <div class="container-fluid">
                 <div class="row flex-xl-nowrap">
-                    <main class="col-md-12 py-md-3 pl-md-5 bd-content">
+                    <main class="col-md-12  bd-content">
                         {{ content | raw}}
                     </main>
                 </div>
