--- a/views/profile/_form.twig
+++ b/views/profile/_form.twig
@@ -13,7 +13,7 @@
 
     <div class="row">
         <div class="col-md-4">
-            {{ form.field(model, 'email').textInput({'placeholder': 'Введите email', 'class':'form-control form-control-sm'}) | raw }}
+            {{ form.field(model, 'email', {'enableAjaxValidation': 'true'}).textInput({'placeholder': 'Введите email', 'class':'form-control form-control-sm'}) | raw }}
         </div>
         <div class="col-md-4">
              {{ form.field(model, 'password').passwordInput({'placeholder': 'Введите пароль', 'class':'form-control form-control-sm'}) | raw }}
@@ -40,7 +40,7 @@
             {{ form.field(model, 'date_of_birthday').widget('yii\\widgets\\MaskedInput', {'mask': '99.99.9999'}).textInput({'placeholder': 'Введите дату рождения', 'class':'form-control form-control-sm'}) | raw }}
         </div>
         <div class="col-md-4">
-            {{ form.field(model, 'phone').widget('yii\\widgets\\MaskedInput', {'mask': '+9 (999) 999-99-99'}).textInput({'placeholder': 'Введите телефон', 'class':'form-control form-control-sm'}) | raw }}
+            {{ form.field(model, 'phone').widget('yii\\widgets\\MaskedInput', {'mask': '+7 (999) 999-99-99'}).textInput({'placeholder': 'Введите телефон', 'class':'form-control form-control-sm'}) | raw }}
         </div>
         <div class="col-md-4">
             {{ form.field(model, 'position').textInput({'placeholder': 'Введите должность', 'class':'form-control form-control-sm'}) | raw }}
