--- a/web/src/scss/global.scss
+++ b/web/src/scss/global.scss
@@ -172,3 +172,7 @@ html .add-photo-input {
         background-color: #fff!important;
     }
 }
+
+.bd-placeholder-img {
+    text-anchor: middle;
+}
