--- a/views/layouts/main.twig
+++ b/views/layouts/main.twig
@@ -135,7 +135,7 @@
         <footer class="navbar navbar-light bg-light mt-4">
             <div class="container-fluid">
                 <div class="pull-left mt-2 mb-2">{{ app.name | raw }} &copy;{{ 'now'|date('Y') }}</div>
-                <div class="pull-right">{{ Yii.powered() | raw }}</div>
+                <div class="pull-right">Техническая поддержка: <a href="mailto:support@schaste-club.ru">support@schaste-club.ru</a></div>
             </div>
         </footer>
 
