--- a/views/site/index.twig
+++ b/views/site/index.twig
@@ -1,7 +1,6 @@
 {{ set(this, 'title', 'Рабочий стол') }}
 
 {{ use('yii/widgets/Pjax') }}
-{{ this.registerJsFile('@web/js/clock.js', {'depends': 'yii\\web\\JqueryAsset'}) }}
 
 <div class="site-index">
 
@@ -9,35 +8,42 @@
 
         <div class="row">
 
-            <div class="col-md-5 mb-4">
+            <div class="col-md-7">
 
-                <div class="mb-4">
-                    <div class="card bg-primary text-white">
-                        <h3 class="card-title text-center">
-                            
-                            <div class="d-flex flex-wrap justify-content-center mt-2">
-                                <a><span class="badge hours"></span></a> :
-                                <a><span class="badge min"></span></a> :
-                                <a><span class="badge sec"></span></a>
-                                <a><span class="badge" id="date"></span>
-                            </div>
-                        </h3>
+            </div>
+
+            <div class="col-md-5 mb-4">
+                <div class="card">
+                    <div class="card-header">
+                        Список долгов по заказам
+                    </div>
+                    <div class="card-body">
+                        {% if debtors %}
+                            <ul class="list-group">
+                                {% for debtor in debtors %}
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        {{ debtor.name }}
+                                        <span class="badge badge-danger badge-pill">{{app.formatter.asCurrency(debtor.sum)|raw}}</span>
+                                    </li>
+                                {% endfor %}
+                        {% else %}
+                            <div class="card-title text-success">Долгов нет</div>
+                        {% endif %}
                     </div>
                 </div>
 
                 {{ pjax_begin() }}
 
-                <div class="site-index__content">
+                {# <div class="site-index__content">
                     <div class="site-index__text" >
                         <div class="site-index__author">{{ author }}</div>
                         <div>{{ text }}</div>
                     </div>
                 
                     <div class="site-index__controll">
-                        {# <a href="/site/index" class="btn btn-outline-primary" id="nextText">Показать ещё</a> #}
                         {{ html.a('Показать ещё', ['index'], {'id': 'nextText', 'class': 'btn btn-outline-primary'}) | raw }}
                     </div>
-                </div>
+                </div> #}
 
                  {{ pjax_end() }}
             </div>
