changed select classes

--- a/views/order/index.twig
+++ b/views/order/index.twig
@@ -44,7 +44,7 @@
                                         'year': 'текущий год',
                                         'month': 'текущий месяц',
                                     }, {
-                                        'class': 'form-control form-control-sm',
+                                        'class': 'custom-select custom-select-sm',
                                         'onchange': 'this.form.changeCurrent.click()'
                                     }) | raw}}
                                     <input type="submit" class="d-none" id="changeCurrent" value="onghfdbnm">
