--- a/views/product/_form.twig
+++ b/views/product/_form.twig
@@ -31,7 +31,7 @@
                 'у.е.'
             ], {
                 'prompt': 'Выберите единицу измерения', 
-                'class': 'form-control form-control-sm'
+                'class': 'custom-select custom-select-sm'
              }) | raw }}
         </div>
         <div class="col-md-8">
