--- a/views/profile/_user.twig
+++ b/views/profile/_user.twig
@@ -27,12 +27,12 @@
                 '10': 'Активен',
                 '9': 'Не активен'
             }, {
-                'class': 'form-control form-control-sm'
+                'class': 'custom-select custom-select-sm'
             }) | raw }}
         </div>
         <div class="col-md-6">
             {{ form.field(user, 'role').dropDownList(roles, {
-                'class': 'form-control form-control-sm'
+                'class': 'custom-select custom-select-sm'
             }) | raw }}
         </div>
     </div><hr/>
